Fix image wrapper height, and remove fixed width to image and set a max height so it's all cropped nicely

--- a/client/templates/building/building.styl
+++ b/client/templates/building/building.styl
@@ -183,9 +183,11 @@
       display inline-block
 
   .building-img-wrap
+    height 500px
     max-width 800px
     .building-img
-      width 100%
+      margin 0 auto
+      max-height 500px
     .carousel-control
       height 100%
       .building-img-icon
